--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     .ratio {
       display: grid;
       position: relative;
+      margin-bottom: 20px;
     }
     .ratio > * {
       grid-area: 1/1;
@@ -33,6 +34,8 @@
         <canvas id="game"> no canvas </canvas>
       </div>
     </div>
+
+    <div>123</div>
 
     <script type="text/javascript" src="index.js"></script>
   </body>
