--- a/index.html
+++ b/index.html
@@ -29,13 +29,11 @@
 
   <body>
     <div id="container" class="ratio">
-      <svg viewBox="0 0 16 9" style="border: 1px solid green"></svg>
+      <svg viewBox="0 0 16 9"></svg>
       <div style="border: 2px dashed darkgrey; position: absolute; z-index: 10">
         <canvas id="game"> no canvas </canvas>
       </div>
     </div>
-
-    <div>123</div>
 
     <script type="text/javascript" src="index.js"></script>
   </body>
