--- a/sounds/sounds.html
+++ b/sounds/sounds.html
@@ -7,7 +7,7 @@
 
   <style>
     body {
-      margin: 0;
+      margin: 10px;
     }
     * {
       box-sizing: border-box;
@@ -18,8 +18,27 @@
   </style>
 
   <body>
-    <div>Sounds</div>
+    <div>
+      <button id="sounds-on">Init auto play</button>
+      <div>Sounds</div>
+    </div>
+    <audio id="myAudio" src="http://jPlayer.org/tmp/countdown.mp3"></audio>
+    <button data-start="18" data-stop="19">0</button>
+    <button data-start="16" data-stop="17">1</button>
+    <button data-start="14" data-stop="15">2</button>
+    <button data-start="12" data-stop="13">3</button>
+    <button data-start="10" data-stop="11">4</button>
+    <button data-start="8" data-stop="9">5</button>
+    <button data-start="6" data-stop="7">6</button>
+    <button data-start="4" data-stop="5">7</button>
+    <button data-start="2" data-stop="3">8</button>
+    <button data-start="0" data-stop="1">9</button>
 
+    <div style="margin-top: 10px">
+      <input id="nums" style="margin-right: 10px" /><button id="nums-voice">
+        voice
+      </button>
+    </div>
     <script type="text/javascript" src="sounds.js"></script>
   </body>
 </html>
