--- a/webgl/webgl.html
+++ b/webgl/webgl.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Breakout</title>
+    <title>WebGL</title>
   </head>
 
   <style>
@@ -31,10 +31,10 @@
     <div id="container" class="ratio">
       <svg viewBox="0 0 16 9"></svg>
       <div style="border: 2px dashed darkgrey; position: absolute; z-index: 10">
-        <canvas id="game"> no canvas </canvas>
+        <canvas id="webgl-canvas"> no canvas </canvas>
       </div>
     </div>
 
-    <script type="text/javascript" src="breakout.js"></script>
+    <script type="text/javascript" src="webgl.js"></script>
   </body>
 </html>
