--- a/webgl/webgl.html
+++ b/webgl/webgl.html
@@ -16,22 +16,11 @@
     p {
       font-family: sans-serif;
     }
-    .ratio {
-      display: grid;
-      /* container */
-      position: relative;
-      margin-bottom: 20px;
-    }
-    .ratio > * {
-      grid-area: 1/1;
-    }
   </style>
 
   <body>
-    <div id="container" class="ratio">
-      <svg viewBox="0 0 16 9"></svg>
       <div style="border: 2px dashed darkgrey; position: absolute; z-index: 10">
-        <canvas id="webgl-canvas"> no canvas </canvas>
+        <canvas id="webgl-canvas" height="300" width="600"> no canvas </canvas>
       </div>
     </div>
 
