webgl color change

--- a/webgl/webgl.html
+++ b/webgl/webgl.html
@@ -19,10 +19,18 @@
   </style>
 
   <body>
-      <div style="border: 2px dashed darkgrey; position: absolute; z-index: 10">
-        <canvas id="webgl-canvas" height="300" width="600"> no canvas </canvas>
-      </div>
-    </div>
+    <canvas
+      id="webgl-canvas"
+      style="border: 2px dashed darkgrey; margin-bottom: 10px"
+      height="300"
+      width="600"
+    >
+      no canvas
+    </canvas>
+
+    <button id="webgl-button" style="padding: 10px">
+      Toggle change colors
+    </button>
 
     <script type="text/javascript" src="webgl.js"></script>
   </body>
