--- a/webgl/webgl.html
+++ b/webgl/webgl.html
@@ -19,14 +19,16 @@
   </style>
 
   <body>
-    <canvas
-      id="webgl-canvas"
-      style="border: 2px dashed darkgrey; margin-bottom: 10px"
-      height="300"
-      width="600"
-    >
-      no canvas
-    </canvas>
+    <div>
+      <canvas
+        id="webgl-canvas"
+        height="300"
+        width="600"
+        style="border: 2px dashed darkgrey; margin-bottom: 10px"
+      >
+        no canvas
+      </canvas>
+    </div>
 
     <button id="webgl-button" style="padding: 10px">
       Toggle change colors
