--- a/webgl/webgl.html
+++ b/webgl/webgl.html
@@ -30,9 +30,7 @@
       </canvas>
     </div>
 
-    <button id="webgl-button" style="padding: 10px">
-      Toggle change colors
-    </button>
+    <button id="webgl-button" style="padding: 10px">Toggle animation</button>
 
     <script type="text/javascript" src="webgl.js"></script>
   </body>
