drop bricks done

--- a/dropbricks/dropbricks.html
+++ b/dropbricks/dropbricks.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>WebGL</title>
+    <title>Drop bricks</title>
   </head>
 
   <style>
@@ -32,6 +32,6 @@
 
     <button id="webgl-button" style="padding: 10px">Toggle animation</button>
 
-    <script type="text/javascript" src="webgl.js"></script>
+    <script type="text/javascript" src="dropbricks.js"></script>
   </body>
 </html>
