--- a/shaders/shaders.html
+++ b/shaders/shaders.html
@@ -32,14 +32,17 @@
 
     <script type="x-shader/x-vertex" id="vertex-shader">
       #version 100
-      void main() {
-        gl_Position = vec4(0.0, 0.0, 0.0, 1.0);
+      precision highp float;
+      attribute float position;
+
+      void main(void) {
+        gl_Position = vec4(position, 0.0, 0.0, 1.0);
         gl_PointSize = 64.0;
       }
     </script>
     <script type="x-shader/x-fragment" id="fragment-shader">
       #version 100
-      void main() {
+      void main(void) {
         gl_FragColor = vec4(0.18, 0.54, 0.34, 1.0);
       }
     </script>
