--- a/threejs/threejs.html
+++ b/threejs/threejs.html
@@ -6,10 +6,28 @@
   </head>
   <style>
     body {
-      margin: 0;
+      margin: 10px;
+      background-color: lightgray;
+    }
+    * {
+      box-sizing: border-box;
+    }
+    p {
+      font-family: sans-serif;
     }
   </style>
 
-  <body></body>
+  <body>
+    <div style="display: flex; justify-content: center">
+      <canvas
+        id="webgl-canvas"
+        width="640"
+        height="480"
+        style="border: 2px dashed darkgrey; margin-bottom: 10px"
+      >
+        no canvas
+      </canvas>
+    </div>
+  </body>
   <script type="text/javascript" src="dist/threejs.js"></script>
 </html>
