--- a/threejs/threejs.html
+++ b/threejs/threejs.html
@@ -7,7 +7,7 @@
   <style>
     body {
       margin: 10px;
-      background-color: lightgray;
+      background-color: #010101;
     }
     * {
       box-sizing: border-box;
@@ -23,7 +23,7 @@
         id="webgl-canvas"
         width="640"
         height="480"
-        style="border: 2px dashed darkgrey; margin-bottom: 10px"
+        style="border-radius: 10px; margin-bottom: 10px"
       >
         no canvas
       </canvas>
